--- a/index.html
+++ b/index.html
@@ -5,9 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/a84b041431.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Document</title>
   </head>
   <body>
+    <nav class="nav">
+      <ul class="nav-items">
+        <li>
+          <a href="#" class="nav-link logo-link"
+            ><span class="nav-text"></span
+            ><i class="fa-solid fa-signs-post fa-3x nav-icon logo"></i
+          ></a>
+        </li>
+        <li>
+          <a href="#" class="nav-link"
+            ><span class="nav-text">WEATHER API</span
+            ><i class="fa-solid fa-cloud-sun-rain fa-3x nav-icon"></i
+          ></a>
+        </li>
+        <li>
+          <a href="#" class="nav-link"
+            ><span class="nav-text">INFO</span
+            ><i class="fa-solid fa-circle-info fa-3x nav-icon"></i
+          ></a>
+        </li>
+        <li>
+          <a href="#" class="nav-link"
+            ><span class="nav-text">JOIN THE CLUB</span
+            ><i class="fa-solid fa-shoe-prints fa-3x nav-icon"></i
+          ></a>
+        </li>
+      </ul>
+    </nav>
+    <main>
+      <div class="hero">
+        <h1>LETS'S GO WALKING</h1>
+      </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
