--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/a84b041431.js"
@@ -13,16 +19,16 @@
   </head>
   <body>
     <nav class="nav">
+      <button class="hamburger-menu"><i class="fa-solid fa-bars"></i></button>
       <ul class="nav-items">
         <li>
           <a href="#" class="nav-link logo-link"
-            ><span class="nav-text"></span
-            ><i class="fa-solid fa-signs-post fa-3x nav-icon logo"></i
+            ><i class="fa-solid fa-signs-post fa-3x nav-icon logo"> </i
           ></a>
         </li>
         <li>
           <a href="#" class="nav-link"
-            ><span class="nav-text">WEATHER API</span
+            ><span class="nav-text">WEATHER</span
             ><i class="fa-solid fa-cloud-sun-rain fa-3x nav-icon"></i
           ></a>
         </li>
@@ -41,10 +47,23 @@
       </ul>
     </nav>
     <main>
-      <div class="hero">
-        <h1>LETS'S GO WALKING</h1>
+      <div class="grid">
+        <div class="hero">
+          <h2>LETS'S</h2>
+          <h1>GO</h1>
+          <h2>WALKING</h2>
+        </div>
+        <div class="weather-section">
+          ijfeoijefwoidddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddwef
+          <p>
+            dedddddddddddddddeddddddddddddddddddddddddddddddddjkkkkkkkkkkkkkkkkkkkkjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+          </p>
+        </div>
+        <div class="info-section">YES thes boxes will grow on mobile</div>
+        <div class="club-section">ded</div>
       </div>
     </main>
+
     <script src="app.js"></script>
   </body>
 </html>
