--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap"
       rel="stylesheet"
     />
+    
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/a84b041431.js"
@@ -54,12 +55,64 @@
           <h2>WALKING</h2>
         </div>
         <div class="weather-section">
-          ijfeoijefwoidddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddwef
-          <p>
-            dedddddddddddddddeddddddddddddddddddddddddddddddddjkkkkkkkkkkkkkkkkkkkkjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-          </p>
+          <input type="text" class="weather-input" placeholder="Bakewell"/>
+         <button class="weather-input-btn">search</button>
+         <div class="location-display"></div>
+         <div class="weather-display"></div>
+         <div class="weather-discription-display"></div>
         </div>
-        <div class="info-section">YES thes boxes will grow on mobile</div>
+        <div class="info-section">
+          <div class="img-slider scroll-snap">
+            <div class="img-element">
+              <img class="info-section-img" src="https://cdn.pixabay.com/photo/2020/07/11/11/34/mam-tor-5393686__340.jpg" alt="">
+              <h3>Mam tor</h3>  
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </img>
+            </div>
+            <div class="img-element">
+              <img class="info-section-img" src="https://media.istockphoto.com/photos/derwent-turrets-picture-id507373739?b=1&k=20&m=507373739&s=170667a&w=0&h=PwrK4n1qppkSnRlFQ3F2BAhlicM0RI2jKKSdEh5g0WQ=" alt="">
+              <h3>Ladybower reservoir</h3>  
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Hac habitasse platea dictumst quisque. Eu volutpat odio facilisis mauris sit amet. Metus aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices. Magna sit amet purus gravida quis blandit turpis cursus. In ante metus dictum at tempor commodo. </p>
+              </img>
+            </div>
+            <div class="img-element">
+              <img class="info-section-img" src="https://media.istockphoto.com/photos/shadows-fall-across-the-gritstone-face-of-stanage-edge-picture-id1390075837?b=1&k=20&m=1390075837&s=170667a&w=0&h=kMHOouOx6nv5oxckqRYJOsyIpdBbSpadOmFnyX8_IAA=" alt="">
+              <h3>Stanage edge</h3>  
+              <p>Vulputate odio ut enim blandit volutpat maecenas volutpat blandit. Purus in mollis nunc sed id semper. Eget nunc lobortis mattis aliquam faucibus purus in. Donec massa sapien faucibus et molestie ac feugiat sed. A condimentum vitae sapien pellentesque. Egestas pretium aenean pharetra magna ac.</p>
+              </img>
+            </div>
+            <div class="img-element">
+              <img class="info-section-img" src="https://cdn.pixabay.com/photo/2021/11/23/16/55/peak-district-6819214__340.jpg" alt="">
+              <h3>Pennine way</h3>  
+              <p>Sed viverra ipsum nunc aliquet bibendum enim facilisis. Eget nunc lobortis mattis aliquam. Neque sodales ut etiam sit amet. Quam vulputate dignissim suspendisse in est ante in nibh mauris. Et egestas quis ipsum suspendisse ultrices gravida dictum fusce. </p>
+              </img>
+            </div>
+            <div class="img-element">
+              <img class="info-section-img" src="https://cdn.pixabay.com/photo/2018/12/14/09/01/bakewell-3874509__340.jpg" alt="">
+              <h3>Bakewell</h3>  
+              <p>Amet mattis vulputate enim nulla aliquet porttitor. Cras ornare arcu dui vivamus arcu felis. Vitae auctor eu augue ut lectus arcu bibendum at varius. Pretium viverra suspendisse potenti nullam ac tortor vitae purus faucibus. Mi tempus imperdiet nulla malesuada pellentesque elit eget gravida. Placerat orci nulla pellentesque dignissim. Nisi porta lorem mollis aliquam ut porttitor leo. </p>
+              </img>
+            </div>
+            <div class="img-element">
+              <img class="info-section-img" src="https://cdn.pixabay.com/photo/2017/06/04/02/17/chatsworth-2370210__340.jpg" alt="">
+              <h3>Chatsworth</h3>  
+              <p> Tincidunt arcu non sodales neque sodales ut etiam. Sit amet aliquam id diam maecenas ultricies. Urna et pharetra pharetra massa massa. Volutpat est velit egestas dui id ornare arcu odio ut. Odio eu feugiat pretium nibh ipsum consequat. Sit amet cursus sit amet dictum sit amet.</p>
+              </img>
+            </div>
+            <div class="img-element">
+              <img class="info-section-img" src="https://cdn.pixabay.com/photo/2020/07/11/11/33/hope-valley-5393680__340.jpg" alt="">
+              <h3>Hope valley</h3>  
+              <p>Quis viverra nibh cras pulvinar mattis. Fringilla ut morbi tincidunt augue interdum velit. Molestie at elementum eu facilisis sed odio morbi. Pulvinar pellentesque habitant morbi tristique senectus et. Elementum tempus egestas sed sed risus pretium quam. Scelerisque eleifend donec pretium vulputate. Lorem dolor sed viverra ipsum.</p>
+              </img>
+            </div>
+            <div class="img-element">
+              <img class="info-section-img" src="https://cdn.pixabay.com/photo/2019/08/03/11/18/winnats-pass-4381592__340.jpg" alt="">
+              <h3>Winnats pass</h3>  
+              <p>Tortor id aliquet lectus proin. Mattis molestie a iaculis at erat. Adipiscing enim eu turpis egestas pretium aenean. Dui id ornare arcu odio ut sem nulla pharetra. </p>
+              </img>
+            </div>
+          </div>
+        </div>
         <div class="club-section">ded</div>
       </div>
     </main>
