--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
           </form>
         </div>
         <div class="footer">
-          <p>this is my footer</p>
-          <p>footer info</p>
+          <p>contact : aidbarrett94@gmail.com</p>
+          <p><a href="https://github.com/aidanbarrettdev">Github</a></p>
         </div>
       </div>
     </main>
