--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
     <main>
       <div class="grid">
         <div class="hero">
-          <h2>LETS'S</h2>
+          <h2>LET'S</h2>
           <h1>GO</h1>
           <h2>WALKING</h2>
         </div>
       
         <div class="info-section" id="info-section">
           <div class="info-section-title">
-          <h2>This weeks walk suggestions</h2>
+          <h2>This week's walk suggestions</h2>
           <p>for new walk suggestions each weak join our club!</p>
         </div>
           <div class="img-slider scroll-snap">
